--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,3 +22,14 @@ services:
     depends_on:
       - inference
     restart: unless-stopped
+  
+  nginx:
+    image: nginx:stable
+    container_name: nginx_proxy
+    ports:
+      - "80:80"
+    volumes:
+      - ./nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - gateway
+    restart: unless-stopped    
